# vqaclip

./: .gitignore  Dockerfile  Dockerfile.cuda  Makefile  README.md  download_data.sh  download_model.py  pyproject.toml  requirements.txt
src/: inference.py  train.py  vqa_parser.py
src/vqaclip/: dataset.py  logger.py  trainer.py  utils.py
src/vqaclip/model/: attention.py  feed_forward.py  mapping_network.py  transformer.py  transformer_block.py  vqaclip.py
